spacing fixes

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -55,8 +55,8 @@ tooltip label {
 
 /* Modules */
 .modules-right {
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
   padding-top: 2px;
   padding-bottom: 2px;
   margin: 3px 2px;
@@ -66,8 +66,8 @@ tooltip label {
 }
 
 .modules-left {
-  padding-left: 5px;
   padding-right: 5px;
+  padding-left: 5px;
   padding-top: 2px;
   padding-bottom: 2px;
   margin: 3px 2px;
@@ -103,7 +103,7 @@ tooltip label {
   color: red;
 }
 
-#network.disabled{
+#network.disabled {
   color: red;
 }
 
